added SEO and sendgrid plugins

--- a/.env.production
+++ b/.env.production
@@ -12,4 +12,5 @@ PGHOST=containers-us-west-38.railway.app
 PGPORT=7285
 PGUSER=postgres
 PGDATABASE=railway
+SENDGRID_API_KEY=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
 
