--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@strapi/plugin-i18n": "4.14.0-alpha.0",
+    "@strapi/plugin-seo": "^1.9.5",
     "@strapi/plugin-users-permissions": "4.14.0-alpha.0",
-    "@strapi/strapi": "4.14.0-alpha.0",
+    "@strapi/provider-email-sendgrid": "^4.14.0",
+    "@strapi/strapi": "^4.14.0-alpha.0",
     "better-sqlite3": "8.5.0",
     "pg": "^8.11.3"
   },
