comment out the URL

--- a/.env.production
+++ b/.env.production
@@ -13,4 +13,7 @@ PGPORT=7285
 PGUSER=postgres
 PGDATABASE=railway
 SENDGRID_API_KEY=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
+CLOUDINARY_NAME=dakkezj8u
+CLOUDINARY_KEY=577411785763422
+CLOUDINARY_SECRET=5Kk0WEzTbToftyJqNZpqdOEjQjM
 
