--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@strapi/provider-upload-cloudinary": "^4.15.5",
     "@strapi/strapi": "^4.14.2",
     "better-sqlite3": "^8.7.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.4",
+    "styled-components": "^5.3.11"
   },
   "author": {
     "name": "A Strapi developer"
