--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "vacation-taxis-strapi-backend",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
   "description": "A Strapi application",
+  "license": "MIT",
+  "author": {
+    "name": "A Strapi developer"
+  },
   "scripts": {
+    "build": "strapi build",
     "develop": "strapi develop",
     "start": "strapi start",
-    "build": "strapi build",
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "^4.14.2",
+    "@strapi/plugin-i18n": "^4.15.5",
     "@strapi/plugin-seo": "^1.9.5",
-    "@strapi/plugin-users-permissions": "^4.14.2",
+    "@strapi/plugin-users-permissions": "^4.15.5",
     "@strapi/provider-email-sendgrid": "^4.14.2",
     "@strapi/provider-upload-cloudinary": "^4.15.5",
-    "@strapi/strapi": "^4.14.2",
+    "@strapi/strapi": "^4.15.5",
     "better-sqlite3": "^8.7.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
@@ -23,15 +27,11 @@
     "react-router-dom": "^5.3.4",
     "styled-components": "^5.3.11"
   },
-  "author": {
-    "name": "A Strapi developer"
-  },
-  "strapi": {
-    "uuid": "cc28d64b-e94a-41bb-bb5b-3fa622e2f88c"
-  },
   "engines": {
     "node": ">=16.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "strapi": {
+    "uuid": "cc28d64b-e94a-41bb-bb5b-3fa622e2f88c"
+  }
 }
