--- a/.env.production
+++ b/.env.production
@@ -7,11 +7,13 @@ ADMIN_JWT_SECRET=TA0xXuP2ncvduMEsyOZf+w==
 TRANSFER_TOKEN_SALT=5w7qsie8nhtzzwntWZHt0Q==
 JWT_SECRET=ActynGlSi38Ziao4e134FQ==
 # Database
-PGPASSWORD=ngnOZt8CFRFavTZ3hLwA
-PGHOST=containers-us-west-38.railway.app
-PGPORT=7285
+PGPASSWORD=cgCbag6FDBga3a46D6a6dA1ACbB6c4gD
+PGHOST=monorail.proxy.rlwy.net
+PGPORT=22089
 PGUSER=postgres
 PGDATABASE=railway
+
+# Sendgrid
 SENDGRID_API_KEY=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
 
 CLOUDINARY_NAME=dyphdly60
