--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "^4.15.5",
+    "@strapi/plugin-i18n": "4.20.0",
     "@strapi/plugin-seo": "^1.9.5",
-    "@strapi/plugin-users-permissions": "^4.15.5",
+    "@strapi/plugin-users-permissions": "4.20.0",
     "@strapi/provider-email-sendgrid": "^4.14.2",
     "@strapi/provider-upload-cloudinary": "^4.15.5",
-    "@strapi/strapi": "^4.15.5",
-    "better-sqlite3": "^8.7.0",
+    "@strapi/strapi": "4.20.0",
+    "better-sqlite3": "8.6.0",
     "pg": "^8.11.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4",
-    "strapi-plugin-comments": "^2.2.15",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "5.3.4",
+    "strapi-plugin-comments": "^2.2.16",
     "strapi-plugin-sitemap": "^3.0.6",
-    "styled-components": "^5.3.11"
+    "styled-components": "5.3.3"
   },
   "engines": {
     "node": ">=16.0.0 <=20.x.x",
